# collision-detection

./: .gitmodules  AABBGenerator.cu  AABBGenerator.cuh  AABBGenerator.h  AUTHORS  Broadphase.cu  Broadphase.cuh  Broadphase.h  CMakeLists.txt  CollisionDetector.cu  LICENSE  Narrowphase.cu  Narrowphase.cuh  Narrowphase.h  README.md  SBELUtils.cmake  SupportFunctions.cuh  include.cuh  main.cu  sscd.h  sscdMath.h
src/: SupportFunctions.cuh  collision_detection.h  include.cuh  sscd.h
src/aabb/: AABBGenerator.cu  AABBGenerator.cuh
src/broadphase/: Broadphase.cu  Broadphase.cuh
src/narrowphase/: Narrowphase.cu  Narrowphase.cuh
test/: binTest_Broadphase.cu  nSquared_Broadphase.cu  run_timing.sh  test1.cu  timing_Broadphase.cu
